--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Jenkins portal</title>
-        <link href=index.css" rel="stylesheet">
+        <link href="index.css" rel="stylesheet">
     </head>
     <body>
         <h1>Jenkins pipeline enabled portal</h1>
